[package]
name = "win_rs_playground"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = ">=0.60, <=0.62", features = [
    "Storage_Streams",
    "Storage_Search",
    "Foundation_Collections",
    "Storage_FileProperties",
    "Storage",
    "Foundation",
]}
windows-collections = "0.3.2"
windows-future = "0.3.2"
